Prevents the debugger from crashing when jumping outside the disassembled program

--- a/examples/browser/styles/debugger.css
+++ b/examples/browser/styles/debugger.css
@@ -73,6 +73,10 @@ body {
     margin-bottom: 20px;
 }
 
+#display canvas {
+    width: 100%;
+}
+
 #registers {
     flex: auto;
 
